[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "moneywiz-api"
version = "0.0.3"
authors = [
    { name="iLeoDo", email="iLeoDo@gmail.com" },
]
description = "A Python api to access moneywiz sqlite database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ileodo/moneywiz-api"
"Bug Tracker" = "https://github.com/ileodo/moneywiz-api/issues"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
