[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "moneywiz-api"
version = "1.0.0"
authors = [
    { name="iLeoDo", email="iLeoDo@gmail.com" },
]
description = "A Python api to access moneywiz sqlite database"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.scripts]
moneywiz-cli = "moneywiz_api.cli.cli:main"

[project.urls]
"Homepage" = "https://github.com/ileodo/moneywiz-api"
"Bug Tracker" = "https://github.com/ileodo/moneywiz-api/issues"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
